welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:11: error: ')' expected but 'return' found.
  return 0
  ^